Second vers. -correctly works edit/create project !!!! service added but doesn't working !!!

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,16 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="denver.srprojectapp" >
 
-    <!-- To access Google+ APIs: -->
+    <uses-permission android:name="android.intent.action.BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <!--
- To retrieve OAuth 2.0 tokens or invalidate tokens to disconnect a user. This disconnect
-     option is required to comply with the Google+ Sign-In developer policies
-    -->
-    <uses-permission android:name="android.permission.USE_CREDENTIALS" /> <!-- To retrieve the account name (email) as part of sign-in: -->
-    <uses-permission android:name="android.permission.GET_ACCOUNTS" /> <!-- To auto-complete the email text field in the login form with the user's emails -->
-    <uses-permission android:name="android.permission.READ_PROFILE" />
-    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+
 
     <application
         android:name=".SRProjectApplication"
@@ -51,6 +47,37 @@
             android:name=".CreateProjectActivity"
             android:label="@string/title_activity_create_project" >
         </activity>
+        <activity
+            android:name=".EditProjectActivity"
+            android:label="@string/title_activity_edit_project" >
+        </activity>
+        <activity
+            android:name=".UserTaskActivity"
+            android:label="@string/title_activity_user_task" >
+        </activity>
+
+        <service
+            android:name=".DelayedSendingToServerIntentService"
+            android:exported="false" >
+        </service>
+
+
+        <service
+            android:name=".MonitorChangesOnTasksIntentService"
+            android:exported="false" >
+        </service>
+
+        <receiver
+            android:name=".StartMonitorChangesOnTaskServiceBroadcastReceiver"
+            android:enabled="true"
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
+
+
+
     </application>
 
 </manifest>
