--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,16 +8,15 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
-
     <application
-        android:name=".SRProjectApplication"
+        android:name=".service.SRProjectApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:minSdkVersion="14"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
+            android:name=".activitys.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,11 +25,11 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".NavigationDrawerActivity"
+            android:name=".activitys.NavigationDrawerActivity"
             android:label="@string/title_activity_navigation_drawer" >
         </activity>
         <activity
-            android:name=".LoginActivity"
+            android:name=".activitys.LoginActivity"
             android:label="@string/title_activity_login"
             android:windowSoftInputMode="adjustResize|stateHidden" >
         </activity>
@@ -40,44 +39,56 @@
             android:value="@integer/google_play_services_version" />
 
         <activity
-            android:name=".RegistrationActivity"
+            android:name=".activitys.RegistrationActivity"
             android:label="@string/title_activity_registration" >
         </activity>
         <activity
-            android:name=".CreateProjectActivity"
+            android:name=".activitys.CreateProjectActivity"
             android:label="@string/title_activity_create_project" >
         </activity>
         <activity
-            android:name=".EditProjectActivity"
+            android:name=".activitys.EditProjectActivity"
             android:label="@string/title_activity_edit_project" >
         </activity>
         <activity
-            android:name=".UserTaskActivity"
+            android:name=".activitys.UserTaskActivity"
             android:label="@string/title_activity_user_task" >
         </activity>
 
         <service
-            android:name=".DelayedSendingToServerIntentService"
+            android:name=".services.DelayedSendingToServerIntentService"
             android:exported="false" >
         </service>
-
-
         <service
-            android:name=".MonitorChangesOnTasksIntentService"
+            android:name=".services.MonitorChangesOnTasksIntentService"
             android:exported="false" >
         </service>
 
         <receiver
-            android:name=".StartMonitorChangesOnTaskServiceBroadcastReceiver"
+            android:name=".receivers.StartMonitorChangesOnTaskServiceBroadcastReceiver"
             android:enabled="true"
             android:exported="true" >
+
+        </receiver>
+        <receiver
+            android:name=".receivers.StarterBroadcastReceiver"
+            android:enabled="true"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
 
+        <receiver
+            android:name=".receivers.StartUploadAllUserTasksBroadcastReceiver"
+            android:enabled="true"
+            android:exported="true" >
+        </receiver>
 
-
+        <service
+            android:name=".services.UploadingAllUserTasksIntentService"
+            android:exported="false" >
+        </service>
     </application>
 
 </manifest>
